--- a/mp3player/styles/globals.css
+++ b/mp3player/styles/globals.css
@@ -99,15 +99,13 @@ a {
 	background-attachment: scroll;
 	background-size: cover;
 }
-.inf-button{
-  border-radius: 30px 30px 0px 0px !important;
-  background-color: var(--second-color) !important;
-  /*border-top: 2px solid var(--first-color) !important;
-  border-left: 2px solid var(--first-color) !important;
-  border-right: 2px solid var(--first-color) !important;*/
+.action-button{
+  height: 50px;
+  border-radius: 100% !important;
+  padding: 0 !important;
 }
-.inf-button:hover{
-  background-color: #3F4E4F !important;
+.action-button:hover{
+  background-color: var(--second-color) !important;
 }
 .RepetirIco{
   display: none !important;
